--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -72,13 +72,14 @@
   </header>
 
   <article class="post-content <b>>A</b>rtificial <b>S</b>ocial <b>I</b>ntelligence clearfix">
-    <p>Multimodal machine learning (MMML) is a vibrant multi-disciplinary research field which addresses some of the original goals 
-      of artificial intelligence by integrating and modeling multiple communicative modalities, including language, vision, and acoustic. 
-      This research field brings some unique challenges for multimodal researchers given the heterogeneity of the data and the contingency often 
-      found between modalities. This course is designed to be a graduate-level course covering recent research papers in multimodal machine learning, 
-      including technical challenges with representation, alignment, reasoning, generation, co-learning and quantifications. 
-      The main goal of the course is to increase critical thinking skills, knowledge of recent technical achievements, and understanding of 
-      future research directions.</p>
+    <p>This course is designed to be a graduate-level seminar course on artificial social intelligence,
+      a vibrant multi-disciplinary research field with the aim of building AI that can perceive human social cues,
+      intents, and psychological states, engage in social interaction, and understand social norms and commonsense.
+      The course will focus on reading and dissecting research papers in this field, spanning foundational topics in
+      multimodal artificial intelligence, human-computer interaction, social commonsense reasoning, theories of social intelligence,
+      and ethical implications of artificial social intelligence, alongside real-world applications in social robotics,
+      affective computing, conversational agents, healthcare, education, and other domains.
+      Students are expected to have prior experience involving AI/ML and have a deep interest in social intelligence.</p>
 <hr />
 
 <ul>
