--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>11-877 AMML</title>
+  <title>11-866 ASI</title>
   <meta name="description" content="11-866 Artificial Social Intelligence - Carnegie Mellon University - Spring 2023
 ">
 
