--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -76,8 +76,8 @@
       a vibrant multi-disciplinary research field with the aim of building AI that can perceive human social cues,
       intents, and psychological states, engage in social interaction, and understand social norms and commonsense.
       The course will focus on reading and dissecting research papers in this field, spanning foundational topics in
-      multimodal artificial intelligence, human-computer interaction, social commonsense reasoning, theories of social intelligence,
-      and ethical implications of artificial social intelligence, alongside real-world applications in social robotics,
+      theories of social intelligence, social skills and competence, emotional intelligence, multimodal AI, human-computer interaction, 
+      and ethical implications of social intelligence, alongside real-world applications in social robotics,
       affective computing, conversational agents, healthcare, education, and other domains.
       Students are expected to have prior experience involving AI/ML and have a deep interest in social intelligence.</p>
 <hr />
